fix css spacing between submodules with and without commands
- also fix the font of submodules

--- a/dep-graph-releaser-gui/src/main/resources/style.css
+++ b/dep-graph-releaser-gui/src/main/resources/style.css
@@ -6,15 +6,20 @@ body {
     height: 100%;
 }
 
+#gui {
+    padding-top:20px;
+}
+
 #messages {
     position: fixed;
     left: 0;
     right: 0;
-    bottom: 10px;
+    bottom: 0px;
     max-height: 25%;
     overflow-y: auto;
     padding-left: 15px;
     padding-right: 15px;
+    padding-bottom: 10px;
 }
 
 #messages > .error, #messages > .warning {
@@ -96,27 +101,36 @@ div.submodules {
     margin-top: 15px;
 }
 
-div.submodules div.project {
+div.submodule {
     width: 295px;
 }
-div.submodules div.project:last-child {
+div.submodule:last-child {
     margin-bottom: 0px;
 }
 
-div.project.withoutCommands {
+div.submodule.withoutCommands {
     padding: 3px 15px;
     margin: 5px auto;
 }
-div.project div.title {
-    font-size: 1em;
-    font-weight: normal;
-    margin-bottom: 0px;
+
+div.submodule.withoutCommands + div.submodule:not(.withoutCommands) {
+    margin-top:20px;
 }
 
 div.title {
     font-size:1.2em;
     font-weight: bold;
     margin-bottom:5px;
+}
+
+div.submodule div.title{
+    font-size: 1.1em;
+}
+
+div.submodule.withoutCommands div.title {
+    font-size: 1em;
+    font-weight: normal;
+    margin-bottom: 0px;
 }
 
 div.title::after, div.command > div.fields::after {
